Updated layout and fixed spacing issue

--- a/main.css
+++ b/main.css
@@ -2,12 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 body{
-    height: 100vh;
-    padding: 20px;
+    height: auto;
+    min-height: auto;
+    padding: 0px;
     scroll-behavior: smooth;
 }
 
