--- a/styles/delievry-cont.css
+++ b/styles/delievry-cont.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     position: relative;
+    overflow: hidden;
 }
 
 
@@ -11,7 +12,6 @@
     flex-direction: center;
     align-items: center;
     justify-content: center;
-    padding: 5px 0px;
     transform: translate(20%, -660%);
 
     & h6{
